fixed overlaping of text (#940)

--- a/src/templates/standard/components/FAQ/FAQ.module.scss
+++ b/src/templates/standard/components/FAQ/FAQ.module.scss
@@ -9,6 +9,14 @@
 .drawer__footer {
   border-top: 1px solid var(--border-color) !important;
 }
+.list__bar__para__wrapper {
+  max-width: 900px;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .add__more__btn {
   i {
